# ProjectScaffoldingEngine

./: .gitignore  HOWTO.md  LICENSE  README.md  pyproject.toml
pse/: __init__.py  bootstrap.py  dsl_service.py  generation_ownership.py  language.py  run.py  sample.pse  sample_basic.pse  sample_with_capabilities.pse  template_loader.py  textx_generators.py  validation.py  vscode.py
pse/generators/: __init__.py
pse/generators/dotnet/: __init__.py  capabilities.py  cleanup.py  docker.py  generator.py  integration.py  mapper.py  nuget.py  process.py  program.py  projects.py  solution.py  structure.py  structure_archetypes.py  structure_helpers.py  structure_sections.py  structure_writers.py  template_loader.py
pse/grammar/: pse.tx
pse/heuristics/: __init__.py  archetypes.yaml  capabilities.yaml  dependency_builder.py  loader.py  packages.yaml  presets.yaml  resolver.py  versions.yaml
pse/model/: __init__.py  architecture.py  capability.py  dependency_graph.py  generation_context.py
pse/sample_output/: .pse-generated.json  Dockerfile  StoreApi.slnx  docker-compose.yml  pse.manifest.json
pse/sample_output/StoreApi.API/: Program.cs  StoreApi.API.csproj  StoreApi.API.http  appsettings.Development.json  appsettings.json
pse/sample_output/StoreApi.Application/: StoreApi.Application.csproj
pse/sample_output/StoreApi.Infrastructure/: StoreApi.Infrastructure.csproj
pse/sample_output/StoreApi.Tests/: StoreApi.Tests.csproj
tests/: test_bootstrap.py  test_dependency_graph.py  test_deployment.py  test_dsl_service.py  test_generation_e2e.py  test_generation_ownership.py  test_heuristics.py  test_textx_integration.py  test_vscode.py
tests/fixtures/: clean_architecture.pse  webapi_no_infrastructure.pse
(+84 files in other folders)
