[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pse"
version = "0.1.0"
description = "A textX-based DSL and scaffolding engine for DDD project architecture."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "textX",
    "textX-jinja",
    "pyyaml"
]

[project.optional-dependencies]
editor = [
    "textx-gen-vscode>=0.3.0",
    "textx-gen-coloring>=0.2.0",
    "textX-LS-server>=0.3.0",
]

[project.scripts]
pse = "pse.run:main"
pse-vscode-extension = "pse.vscode:main"

[project.entry-points.textx_languages]
pse = "pse.language:pse_language"

[project.entry-points.textx_generators]
pse_dotnet = "pse.textx_generators:pse_dotnet_generator"

[tool.setuptools.packages.find]
include = ["pse*"]

[tool.setuptools.package-data]
pse = [
    "grammar/*.tx",
    "heuristics/*.yaml",
    "templates/dotnet/*.tmpl",
]
